--- a/ui/customer/status.html
+++ b/ui/customer/status.html
@@ -255,10 +255,7 @@ async function loadData() {
   try {
 
     const data = await apiFetch("/api/status");
-
-    if (!res.ok) throw new Error("Status API failed");
-
-    const data = await res.json();
+    if (!data) return;
 
     document.getElementById("lastUpdated").textContent =
       formatDate(data.lastUpdated);
@@ -267,8 +264,7 @@ async function loadData() {
        OVERALL STATUS
     ============================ */
 
-    const overall = data.globalIndicator; 
-    // possible values: none, minor, major, critical
+    const overall = data.globalIndicator || "unknown";
 
     const overallEl = document.getElementById("overallStatus");
 
@@ -291,7 +287,7 @@ async function loadData() {
     const tbody = document.getElementById("tableBody");
     tbody.innerHTML = "";
 
-    data.components.forEach(c => {
+    (data.components || []).forEach(c => {
 
       const tr = document.createElement("tr");
 
@@ -316,7 +312,6 @@ async function loadData() {
       "status-pill red";
   }
 }
-
 /* ============================
    INIT
 ============================ */
